Upgraded Wicket library from v1.3.5 to v1.4.5 for Enterprise Manager as the following: (1) Updated five jars related to wicket (1.4.5), slf4j(1.5.8) and portlet-api (2.0). (2) Changed namespaces of all wicket pages from xmlns:wicket="http://wicket.apache.org/" to xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd". (3) Changed model methods of Wicket Component by renaming setModel to setDefaultModel, setModelObject to setDefaultModelObject, and getModelObject to getDefaultModelObject. (4) Changed NumberValidator to RangeValidator. (5) Moved buttons into a form in YuiDialog as Wicket 1.4 required.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25407 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/EsmStandardWebPage.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/EsmStandardWebPage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" xmlns:wicket="http://wicket.apache.org/">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <head profile="http://www.w3.org/2005/10/profile">
     <title wicket:id="titleLabel">[Enterprise Service Manager]</title>
     <link rel="stylesheet" href="/css/l7.css" media="all" type="text/css" />
