--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/StandardReportsManagementPanel.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/StandardReportsManagementPanel.html
@@ -1,7 +1,7 @@
 <!--
   Standard Reports - Generated Reports
 -->
-<wicket:panel xmlns:wicket="http://wicket.apache.org/">
+<wicket:panel xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 
     <div class="panel">
         <div class="panelTitle">
