--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/YuiDataTable.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/YuiDataTable.html
@@ -1,7 +1,7 @@
 <!--
   YUI DataTable component ....
 -->
-<wicket:panel xmlns:wicket="http://wicket.apache.org/">
+<wicket:panel xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
     <div wicket:id="paging" class="panelToolbar"/>
     <div class="panelContent">
         <div wicket:id="table"/>
