--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/YuiDateSelector.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/YuiDateSelector.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html xmlns:wicket="http://wicket.apache.org/">
+<html xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
