g EM-603: Fixed by changing the button type of "Go" from "submit" to "button".
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25422 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/EnterpriseSearchUsersPanel.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/EnterpriseSearchUsersPanel.html
@@ -117,7 +117,7 @@
                         <select id="searchManners" wicket:id="list.searchManners"/>
                         :
                         <input type="text" wicket:id="textfield.searchValues" value="" size="30" />
-                        <button type="submit" wicket:id="button.searchUsers"><wicket:message key="label.button.go"/></button>
+                        <button type="button" wicket:id="button.searchUsers"><wicket:message key="label.button.go"/></button>
                     </form>
                 </wicket:panel>
             </div>
