bug 8327: Fixed by changing the input element for the button "Apply" to a button element.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25423 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/SystemSettings.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/SystemSettings.html
@@ -370,7 +370,7 @@
                                         <td><input wicket:id="timeout" name="timeout" class="right" type="text" value="30" size="6" maxlength="4"/> <wicket:message key="label.global.session.timeoutunit">minutes</wicket:message></td>
                                     </tr>
                                 </table>
-                                <input wicket:id="global.submit" type="submit" value="Apply" wicket:message="value:label.apply"/>
+                                <button type="button" wicket:id="global.submit"><wicket:message key="label.apply">Apply</wicket:message></button>
                             </form>
                         </div>
                     </div>                    
