g EM-604: Fixed by changing the type of "Select" buttons from "submit" to "button" in Audits page and Policy History page.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25431 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/Audits.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/Audits.html
@@ -150,7 +150,7 @@
                                     </tr>
                                     <tr>
                                         <td></td>
-                                        <td align="right"><button wicket:id="audit.select.button" type="submit"><wicket:message key="label.select">Select</wicket:message></button></td>
+                                        <td align="right"><button type="button" wicket:id="audit.select.button"><wicket:message key="label.select">Select</wicket:message></button></td>
                                     </tr>
                                 </table>
                             </form>
