--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMapping.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMapping.html
@@ -131,7 +131,7 @@
                                     <tr>
                                         <td></td>
                                         <td align="right">
-                                            <button wicket:id="migrationSelectButton" type="submit"><wicket:message key="label.select">Select</wicket:message></button>
+                                            <button type="button" wicket:id="migrationSelectButton"><wicket:message key="label.select">Select</wicket:message></button>
                                         </td>
                                     </tr>
                                 </table>
