g EM-605: Fixed by changing the type of "Search" button from "submit" to "button" in Policy Migration page.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25440 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigration.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigration.html
@@ -1147,7 +1147,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <td class="right"><button type="submit" wicket:id="dependencySearchButton">Search</button></td>
+                                                <td class="right"><button type="button" wicket:id="dependencySearchButton">Search</button></td>
                                             </tr>
                                         </table>
 
