g EM-606: Now the copyright year in the System Settings page gets from the build info rather than hard coded.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25458 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/SystemSettings.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/SystemSettings.html
@@ -177,7 +177,7 @@
                                 </tr>
                                 <tr>
                                     <th class="top"><wicket:message key="label.copyright.notice"/>:</th>
-                                    <td class="top wrap"><wicket:message key="label.copyright"/></td>
+                                    <td class="top wrap" wicket:id="copyright"/>
                                 </tr>
                             </table>
                         </div>
