g EM-595: Fixed by reserving all new lines in the esm trust info, so ESM Cert field now can wrap nicely in SSEM Account Mapping page.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25468 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/esmtrustform.html
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/esmtrustform.html
@@ -39,7 +39,7 @@
                         <td class="label" align="top">ESM Certificate:</td>
                         <td class="esmtrustcontrols">
                             <input type="hidden" name="esminfo" id="esminfo" value="{9}"/>
-                            <div id="esmcertinfodisplay" class="pre">{9}</div>
+                            <div id="esmcertinfodisplay" class="pre"><pre>{9}</pre></div>
                         </td>
                         <td class="spacer"></td>
                     </tr>
