g EM-610: Fixed by changing the type of "Reload Migration" button from "submit" to "button" in Policy Migration page.  Also fixed some other buttons ("Load Previous Mappings", "Clear Mapping", and "Edit Mapping Value") at the same way.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25487 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigration.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigration.html
@@ -797,7 +797,7 @@
                         <tr>
                         <td>Reload to re-migrate using settings from a previous migration:</td> 
                         <td><select wicket:id="reloadSelect"></select></td>
-                        <td><button type="submit" wicket:id="reloadMigrationButton">Reload Migration</button></td>
+                        <td><button type="button" wicket:id="reloadMigrationButton">Reload Migration</button></td>
                         </tr>
                         </table>
                     </form>
@@ -1125,9 +1125,9 @@
                                <div wicket:id="dependenciesTable"/>
 
                                 <form wicket:id="dependencyControlsForm">
-                                    <button type="submit" wicket:id="dependencyLoadButton">Load Previous Mappings</button>
-                                    <button type="submit" wicket:id="dependencyClearButton">Clear Mapping</button>
-                                    <button type="submit" wicket:id="dependencyEditButton">Edit Mapping Value</button>
+                                    <button type="button" wicket:id="dependencyLoadButton">Load Previous Mappings</button>
+                                    <button type="button" wicket:id="dependencyClearButton">Clear Mapping</button>
+                                    <button type="button" wicket:id="dependencyEditButton">Edit Mapping Value</button>
                                 </form>
                             </td>
                             <td></td>
