g EM-616: Fixed by setting the width "Reload Migration" drop down menu fixed, so the menu will not dynamically expand to fit a long migration label.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25523 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigration.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigration.html
@@ -796,7 +796,7 @@
                         <table>
                         <tr>
                         <td>Reload to re-migrate using settings from a previous migration:</td> 
-                        <td><select wicket:id="reloadSelect"></select></td>
+                        <td><select wicket:id="reloadSelect" style="width: 240px;"></select></td>
                         <td><button type="button" wicket:id="reloadMigrationButton">Reload Migration</button></td>
                         </tr>
                         </table>
