g EM-620: Fixed by specifying the button type attribute (type="button") for these two buttons "Download" and "Delete" in the Standard Reports page.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25685 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/StandardReportsManagementPanel.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/StandardReportsManagementPanel.html
@@ -15,14 +15,14 @@
                 <div class="panelToolbar">
                     <input name="reportId" type="hidden" value="" wicket:id="reportId"/>
 
-                    <button wicket:id="downloadReportButton" title="Download Report">Download</button>
+                    <button type="button" wicket:id="downloadReportButton" title="Download Report">Download</button>
                     <span style="font-weight: bold;">Format:</span>
                     <select wicket:id="reportFormat">
                         <option>HTML</option>
                         <option selected="selected">PDF</option>
                     </select>
                     <span style="margin-left: 0.5em; margin-right: 0.5em;">|</span>
-                    <button wicket:id="deleteReportButton" title="Delete Report">Delete</button>
+                    <button type="button" wicket:id="deleteReportButton" title="Delete Report">Delete</button>
                 </div>
             </form>
 
