g EM-621: Fixed by disallowing an empty string as a "null"-word string at the Grouping section in the Standard Reports page.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25730 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/StandardReports.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/StandardReports.html
@@ -750,7 +750,7 @@
             l7.Widget.selectDropDownByValue(tr._ssgClusterDropDown, ssgClusterId);
             populateGroupingMessageContextDropDown(tr._messageContextDropDown, ssgClusterId);
             l7.Widget.selectDropDownByValue(tr._messageContextDropDown, messageContextKey);
-            tr._constraintTextBox.value = constraint;
+            tr._constraintTextBox.value = constraint == null? "" : constraint;
             return null;
         }
 
@@ -874,7 +874,7 @@
                 var grouping = {};
                 grouping.clusterId = tr._ssgClusterDropDown.value;
                 grouping.messageContextKey = tr._messageContextDropDown.value;
-                grouping.constraint = tr._constraintTextBox.value;
+                grouping.constraint = tr._constraintTextBox.value == ""? null : tr._constraintTextBox.value;
                 settings.groupings.push(grouping);
             }
             settings.summaryChart = summaryChartCheckBox.checked;
