g EM-622: Fixed by cleaning the previous groupings before loading a new set of groupings at the Grouping section in the Standard Reports page.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25731 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/StandardReports.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/StandardReports.html
@@ -1232,6 +1232,7 @@
                             bodyHtml += '</div>';
                             l7.Dialog.showErrorDialog(localizedStrings.WARNING, bodyHtml, localizedStrings.OK);
                         }
+                        deleteAllGroupings();
                         setFieldsFromSettings(settings);
                         document.getElementById('saveSettingsDialog_name').value = settingsName;
                     }
