--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMapping.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMapping.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <!-- PROTOTYPE ONLY END -->
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>Policy Mapping [Enterprise Service Manager]</title>
+    <title>Policy History [Enterprise Service Manager]</title>
     <link rel="stylesheet" href="../css/l7.css" media="all" type="text/css" />
     <script type="text/javascript" src="../js/l7.js"></script>
 </head>
