ug EM-672: Fix for Tooltip for refresh icon in "Reload Migration" is incorrect
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27960 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigration.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigration.html
@@ -789,7 +789,7 @@
             <div class="panel">
                 <div class="panelTitle">
                     Reload Migration
-                     <img wicket:id="refresh" class="refresh clickableImg middle" src="../images/refresh.png" title="Refresh list of generated reports" alt="Refresh" />
+                     <img wicket:id="refresh" class="refresh clickableImg middle" src="../images/refresh.png" title="Refresh list of previous migrations" alt="Refresh" />
                 </div>
                 <div class="panelContent">
                     <form wicket:id="reloadForm">
