--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigrationDownloadPanel.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigrationDownloadPanel.html
@@ -1,5 +1,5 @@
 <!--
-    Panel for selection of Policy Migration archive upload.
+    Panel for Policy Migration archive download options.
 -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
@@ -9,7 +9,7 @@
   </head>
   <body>
       <wicket:panel>
-        <form wicket:id="archiveForm" enctype="multipart/form-data" method="POST">
+        <form wicket:id="downloadForm" method="POST">
             <table width="100%" height="100%" class="spaced">
                 <tr>
                     <td valign="top">
@@ -17,22 +17,22 @@
                             <div wicket:id="feedback" class="center"/>
                         </div>
                         <div>
-                            <wicket:message key="label.header">Select a migration archive for upload.</wicket:message>
+                            <wicket:message key="label.header">Enter download options.</wicket:message>
                         </div>
                         <br/>
                         <div>
                             <table>
                                 <tr>
-                                    <th><wicket:message key="label">Label</wicket:message>:</th>
-                                    <td><input wicket:id="label" type="text" maxlength="32" size="32"/></td>
-                                </tr>
-                                <tr>
-                                    <th><wicket:message key="archive">Archive</wicket:message>:</th>
-                                    <td><input wicket:id="archive" type="file" size="22"/></td>
+                                    <th><wicket:message key="encrypted">Encrypt migration archive</wicket:message>:</th>
+                                    <td><input wicket:id="encrypted" type="checkbox"/></td>
                                 </tr>
                                 <tr>
                                     <th><wicket:message key="password">Password</wicket:message>:</th>
                                     <td><input wicket:id="password" type="password" maxlength="256" size="32"/></td>
+                                </tr>
+                                <tr>
+                                    <th><wicket:message key="passwordConfirmation">Password Confirmation</wicket:message>:</th>
+                                    <td><input wicket:id="passwordConfirmation" type="password" maxlength="256" size="32"/></td>
                                 </tr>
                             </table>
                         </div>
